--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./build/app.js",
+    "start": "node ./src/app.js",
     "start:dev": "nodemon ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
